@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-08T16:16:04Z",
-  "count_outdated" : 233,
-  "uniques_outdated" : 167,
+  "timestamp" : "2024-05-09T16:16:07Z",
+  "count_outdated" : 234,
+  "uniques_outdated" : 168,
   "count" : 235,
   "uniques" : 169,
   "clones" : [
-    {
-      "timestamp": "2024-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-02T00:00:00Z",
       "count": 1,
